--- a/src/styles/DegreePrograms.css
+++ b/src/styles/DegreePrograms.css
@@ -1,3 +1,26 @@
+/* Media queries to adjust styles for mobile devices */
+@media (max-width: 768px) {
+  .degree-section {
+    columns: 1; /* Display one column on mobile */
+    width: 100%;
+  }
+
+  .program-buttons {
+    justify-content: flex-start;
+    margin-left: 10px; 
+  }
+
+  .program-button {
+    width: 100%; 
+    height: 60px; 
+    font-size: 1em;
+  }
+
+  .state-list {
+    width: 100%; 
+  }
+}
+
 .degree-section {
   display: flex;
   flex-wrap: wrap;
@@ -16,7 +39,7 @@
 }
 
 .program-button {
-  font-size: .85em;
+  font-size: 0.85em;
   font-weight: 700;
   text-transform: uppercase;
   background-color: #CA8A35;
