--- a/src/styles/DegreePrograms.css
+++ b/src/styles/DegreePrograms.css
@@ -38,27 +38,19 @@
   justify-content: center;
 }
 
-.program-button {
-  font-size: 0.85em;
-  font-weight: 700;
-  text-transform: uppercase;
-  background-color: #CA8A35;
-  border: none;
-  border-radius: 7px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 10px;
-  color: #ffffff;
-  cursor: pointer;
-  width: 300px;
-  height: 50px;
-}
-
-.program-button:hover {
-  background-color: #CB8E31;
-}
-
-.state-list {
-  width: 300px;
-  padding-left: 20px;
+.program-details-modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: auto;
+  margin-top: 0px;
+  z-index: 9999;
+  max-height: 91vh;
+  overflow-y: auto;
 }
